plugins {
    id "java"
    id("maven-publish")
}

ext.localProps = new Properties()
try {
    localProps.load(file("local.properties").newReader())
} catch (Exception ignored) {
    // scheiß drauf groovy ist kacke
}

group = 'de.hglabor'
version = '0.1.1'
description = 'KitAPI for HGLabor'

allprojects {
    repositories {
        jcenter()
    }
    apply plugin: 'maven'
    apply plugin: 'maven-publish'
    apply plugin: 'java'
}

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url 'https://maven.pkg.github.com/HGLabor/Localization'
        credentials {
            username = localProps["gpr.user"] ?: System.getenv("USERNAME")
            password = localProps["gpr.key"] ?: System.getenv("TOKEN")
        }
    }
    maven {
        url 'https://maven.pkg.github.com/HGLabor/HGLaborUtils'
        credentials {
            username = localProps["gpr.user"] ?: System.getenv("USERNAME")
            password = localProps["gpr.key"] ?: System.getenv("TOKEN")
        }
    }
    maven { url = uri('https://papermc.io/repo/repository/maven-public/') }
    maven { url = uri('https://oss.sonatype.org/content/groups/public/') }
    maven { url = uri('http://maven.enginehub.org/repo/') }
    maven { url = uri('http://repo.md-5.net/content/groups/public/') }
    maven { url = uri('https://repo.maven.apache.org/maven2/') }
    maven { url = uri('https://jitpack.io/') }
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = "https://maven.pkg.github.com/HGLabor/HGLaborKitAPI2.0"
            credentials {
                username = localProps["gpr.user"] ?: System.getenv("USERNAME")
                password = localProps["gpr.key"] ?: System.getenv("TOKEN")
            }
        }
    }
    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
}
dependencies {
    compileOnly 'org.apache.commons:commons-lang3:3.11'
    compileOnly 'LibsDisguises:LibsDisguises:10.0.21'
    compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
    compileOnly 'org.bukkit:craftbukkit:1.16.5-R0.1-SNAPSHOT'
    compileOnly 'de.hglabor:localization:0.0.3'
    compileOnly 'de.hglabor:hglabor-utils:0.0.4'
    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.2.0-SNAPSHOT'
}


tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
